--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -1,10 +1,8 @@
-name : tests-auth
-on:
-  pull_request
+name: tests-auth
+on: pull_request
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - run : cd auth && npm intall && npm run test:ci
-      
+      - uses: actions/checkout@v2
+      - run: cd auth && npm install && npm run test:ci
