--- a/.github/workflows/tests-payments.yaml
+++ b/.github/workflows/tests-payments.yaml
@@ -1,10 +1,8 @@
-name : tests-payments
-on:
-  pull_request
+name: tests-payments
+on: pull_request
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - run : cd payments && npm intall && npm run test:ci
-      
+      - uses: actions/checkout@v2
+      - run: cd payments && npm install  && npm run test:ci
