--- a/.github/workflows/tests-tickets.yaml
+++ b/.github/workflows/tests-tickets.yaml
@@ -1,10 +1,8 @@
-name : tests-tickets
-on:
-  pull_request
+name: tests-tickets
+on: pull_request
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - run : cd tickets && npm intall && npm run test:ci
-      
+      - uses: actions/checkout@v2
+      - run: cd tickets && npm install  && npm run test:ci
