--- a/.github/workflows/tests-orders.yaml
+++ b/.github/workflows/tests-orders.yaml
@@ -1,7 +1,7 @@
 name: tests-orders
-on: pull_request
-  - path
-  - 'orders/**'
+on: pull_request:
+      paths:
+        - 'orders/**'
 jobs:
   build:
     runs-on: ubuntu-latest
