--- a/.github/workflows/tests-payments.yaml
+++ b/.github/workflows/tests-payments.yaml
@@ -1,7 +1,7 @@
 name: tests-payments
-on: pull_request
-  - path
-  - 'payments/**'
+on: pull_request:
+      paths:
+        - 'payments/**'
 jobs:
   build:
     runs-on: ubuntu-latest
