--- a/.github/workflows/tests-tickets.yaml
+++ b/.github/workflows/tests-tickets.yaml
@@ -1,7 +1,7 @@
 name: tests-tickets
-on: pull_request
-  - path
-  - 'tickets/**'
+on: pull_request:
+      paths:
+        - 'tickets/**'
 jobs:
   build:
     runs-on: ubuntu-latest
